Added custom mpi mode

--- a/externals/tecio/meson.build
+++ b/externals/tecio/meson.build
@@ -11,7 +11,7 @@ else
   message('Boost sources found.')
 endif
 
-if mpi_dep[0].found() or mpi_dep[1].found()
+if mpi
   subdir('teciompisrc')
   su2_deps += teciompi_dep
   su2_cpp_args += ['-DHAVE_TECIO', '-DTECIOMPI']
