added MULTI_GEO options to config_template.cfg

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1065,6 +1065,24 @@ GEO_NUMBER_STATIONS= 25
 % Geometrical evaluation mode (FUNCTION, GRADIENT)
 GEO_MODE= FUNCTION
 
+% ----------------------- GEOMETRY EVALUATION PARAMETERS ----------------------%
+%
+% Marker(s) of the surface where geometrical based function will be evaluated
+MULTI_GEO_MARKER= ( airfoil ); (fuselage)
+%
+% Description of the geometry to be analyzed (AIRFOIL, WING)
+MULTI_GEO_DESCRIPTION= WING; FUSELAGE
+%
+% Coordinate of the stations to be analyzed
+MULTI_GEO_LOCATION_STATIONS= (0.0, 0.5, 1.0); (0.1, 2.0, 3.0)
+%
+% Geometrical bounds (Y coordinate) for the wing geometry analysis or
+% fuselage evaluation (X coordinate)
+MULTI_GEO_BOUNDS= (1.5, 3.5); (0.1, 3.0)
+%
+% Number of section cuts to make when calculating wing geometry
+MULTI_GEO_NUMBER_STATIONS= 25 ; 25
+
 % ------------------------- GRID ADAPTATION STRATEGY --------------------------%
 %
 % Kind of grid adaptation (NONE, PERIODIC, FULL, FULL_FLOW, GRAD_FLOW,
