--- a/TestCases/disc_adj_fsi/Airfoil_2d/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/Airfoil_2d/configFEA.cfg
@@ -19,9 +19,8 @@ MATERIAL_DENSITY= 2700.0
 % this needs to appear before the normal load marker
 CONSERVATIVE_INTERPOLATION= NO
 % solid
-MARKER_CLAMPED = ( clamped )
-% this needs to be here to make SU2 cfg happy
-MARKER_PRESSURE= ( pressure_side_s,0.0, suction_side_s,0.0 )
+MARKER_CLAMPED= ( clamped )
+MARKER_FLUID_LOAD= ( pressure_side_s, suction_side_s )
 %
 % Solid numerics ------------------------------------------------------- %
 GEOMETRIC_CONDITIONS= LARGE_DEFORMATIONS
@@ -38,7 +37,7 @@ DISCADJ_LIN_PREC= ILU
 % Convergence criteria ------------------------------------------------- %
 % interaction
 BGS_RELAXATION= FIXED_PARAMETER
-STAT_RELAX_PARAMETER= 0.7
+STAT_RELAX_PARAMETER= 1.0
 % solid
 INNER_ITER= 11
 % grid deformation
