--- a/meson.build
+++ b/meson.build
@@ -129,12 +129,12 @@ if get_option('enable-pywrapper')
 endif
 
 message('''-------------------------------------------------------------------------
-         |    ___ _   _ ___                                                      | 
-         |   / __| | | |_  )   Release 6.2.0 'Falcon'                            | 
-         |   \__ \ |_| |/ /                                                      | 
-         |   |___/\___//___|   Configuration Summary                             | 
-         |                                                                       | 
-         ------------------------------------------------------------------------- 
+         |    ___ _   _ ___                                                      |
+         |   / __| | | |_  )   Release 7.0.0 'Blackbird'                         |
+         |   \__ \ |_| |/ /                                                      |
+         |   |___/\___//___|   Meson Configuration Summary                       |
+         |                                                                       |
+         -------------------------------------------------------------------------
          
          Option          Value
          ---------------------
