--- a/TestCases/rans_uq/naca0012/turb_NACA0012_uq.cfg
+++ b/TestCases/rans_uq/naca0012/turb_NACA0012_uq.cfg
@@ -94,7 +94,7 @@ CFL_ADAPT= YES
 CFL_ADAPT_PARAM= ( 1.5, 0.5, 10.0, 100.0 )
 %
 % Number of total iterations
-EXT_ITER= 10
+ITER= 99999
 % ----------------------- SLOPE LIMITER DEFINITION ----------------------------%
 %
 % Coefficient for the limiter
@@ -177,7 +177,7 @@ CFL_REDUCTION_TURB= 1.0
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
-CONV_CRITERIA= CAUCHY
+CONV_FIELD= LIFT
 %
 %
 % Min value of the residual (log10 of the residual)
@@ -190,7 +190,7 @@ CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 %
 % Epsilon to control the series convergence
-CONV_CAUCHY_EPS= 1E-5
+CONV_CAUCHY_EPS= 1E-6
 %
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
@@ -242,3 +242,9 @@ WRT_SOL_FREQ= 10000
 %
 % Writing convergence history frequency
 WRT_CON_FREQ= 1
+%
+% Screen output
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+%
+% History output
+HISTORY_OUTPUT= (ITER, AERO_COEFF, RMS_RES)
