--- a/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c2.cfg
+++ b/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c2.cfg
@@ -263,4 +263,7 @@ WRT_SOL_FREQ= 10000
 WRT_CON_FREQ= 1
 %
 % Screen output 
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+%
+% History output
+HISTORY_OUTPUT= (ITER, AERO_COEFF, RMS_RES)
