--- a/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c1.cfg
+++ b/TestCases/rans_uq/naca0012/turb_NACA0012_uq_p1c1.cfg
@@ -196,7 +196,7 @@ CFL_REDUCTION_TURB= 1.0
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
-CONV_CRITERIA= CAUCHY
+CONV_FIELD= LIFT
 %
 %
 % Min value of the residual (log10 of the residual)
@@ -209,7 +209,7 @@ CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 %
 % Epsilon to control the series convergence
-CONV_CAUCHY_EPS= 1E-5
+CONV_CAUCHY_EPS= 1E-6
 %
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
