--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1237,27 +1237,20 @@ FFD_BSPLINE_ORDER= 2, 2, 2
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
-% Number of total iterations
-EXT_ITER= 1000
-%
-% Convergence criteria (CAUCHY, RESIDUAL)
-%
-CONV_CRITERIA= RESIDUAL
-%
+% Convergence field
+CONV_FIELD= REL_RMS_DENSITY
 %
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -8
+CONV_RESIDUAL_MINVAL= -8
 %
 % Start convergence criteria at iteration number
 STARTCONV_ITER= 10
 %
-% Number of elements to apply the criteria
+% Number of elements to apply the Cauchy criteria
 CAUCHY_ELEMS= 100
 %
 % Epsilon to control the series convergence
-CAUCHY_EPS= 1E-10
-%
-%
+CONV_CAUCHY_EPS= 1E-10
 
 % ----------------------- DRIVER REFACTORED ITERATORS -------------------------%
 % As of now, these are only strictly necessary for single-zone discrete adjoint 
