Adding feature_STLwriter to regression testing on push.

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'develop'
       - 'master'
+      - 'feature_STLwriter'
   pull_request:
     branches: 
       - 'develop'
