update build systems

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -119,6 +119,8 @@ su2_cfd_src += files(['drivers/CDriver.cpp',
                       'drivers/CDiscAdjSinglezoneDriver.cpp',
                       'drivers/CDummyDriver.cpp'])
 
+su2_cfd_src += files(['limiters/computeLimiters.cpp'])
+
 if get_option('enable-normal')
   su2_cfd = executable('SU2_CFD',
                        su2_cfd_src, 
