--- a/SU2_DOT/src/meson.build
+++ b/SU2_DOT/src/meson.build
@@ -12,6 +12,7 @@ if get_option('enable-normal')
                                         'output/filewriter/CFVMDataSorter.cpp',
                                         'output/filewriter/CSurfaceFVMDataSorter.cpp',
                                         'output/filewriter/CCSVFileWriter.cpp',
+                                        'output/filewriter/CSTLFileWriter.cpp',
                                         'output/filewriter/CTecplotFileWriter.cpp',
                                         'output/filewriter/CTecplotBinaryFileWriter.cpp',
                                         'output/filewriter/CParaviewFileWriter.cpp',
@@ -45,6 +46,7 @@ if get_option('enable-autodiff')
 				       'output/filewriter/CFVMDataSorter.cpp',
 				       'output/filewriter/CSurfaceFVMDataSorter.cpp',
 				       'output/filewriter/CCSVFileWriter.cpp',
+				       'output/filewriter/CSTLFileWriter.cpp',
 				       'output/filewriter/CTecplotFileWriter.cpp',
 				       'output/filewriter/CTecplotBinaryFileWriter.cpp',
 				       'output/filewriter/CParaviewFileWriter.cpp',
