--- a/config_template.cfg
+++ b/config_template.cfg
@@ -23,7 +23,7 @@ KIND_TURB_MODEL= NONE
 % Specify subgrid scale model(NONE, IMPLICIT_LES, SMAGORINSKY, WALE, VREMAN)
 KIND_SGS_MODEL= NONE
 %
-% Specify the verification solution(NO_VERIFICATION_SOLUTION, INVISCID_VORTEX,
+% Specify the verification solution(NO_VERIFICATION_SOLUTION, INVISCID_VORTEX, SHOCK_VORTEX
 %                                   RINGLEB, NS_UNIT_QUAD, TAYLOR_GREEN_VORTEX,
 %                                   MMS_NS_UNIT_QUAD, MMS_NS_UNIT_QUAD_WALL_BC,
 %                                   MMS_NS_TWO_HALF_CIRCLES, MMS_NS_TWO_HALF_SPHERES,
