Added extra cmake args

--- a/meson.build
+++ b/meson.build
@@ -16,7 +16,7 @@ su2_deps     = [declare_dependency(include_directories: 'externals/CLI11')]
 subdir('externals/loguru')
 su2_deps += loguru_dep
 
-vtk_dep = dependency('ParaView', cmake_args: ['-DCMAKE_CXX_COMPILER_VERSION=4.8.5', '-DCMAKE_CXX_STANDARD_COMPUTED_DEFAULT=4.8.5'], modules: ['ParaView::Catalyst', 'VTK::CommonCore', 'ParaView::PythonCatalyst'])
+vtk_dep = dependency('ParaView', cmake_args: get_option('cmake-args'), modules: ['ParaView::Catalyst', 'VTK::CommonCore', 'ParaView::PythonCatalyst'])
 
 
 su2_deps += vtk_dep
