--- a/meson_options.txt
+++ b/meson_options.txt
@@ -13,3 +13,4 @@ option('enable-pastix', type : 'boolean', value : false, description: 'enable Pa
 option('pastix_root', type : 'string', value : 'externals/pastix/', description: 'PaStiX base directory')
 option('scotch_root', type : 'string', value : 'externals/scotch/', description: 'Scotch base directory')
 option('custom-mpi',  type : 'boolean', value : false, description: 'Use custom mpi include and library path from env variables')
+option('cmake-args', type : 'string', value : '', description: 'Extra cmake arguments')
