updated code sections commented by pedro; relocated and renamed signalprocessingtoolbox to CWindowingTools; Implemented time convergence monitor in SU2_CFD for singlezone direct runs; Adapted python scripts such that shape_optimization.py, direct_differentiation.py and discrete_adjoint.py works with time convergence functionality; Adapted tavg ouptut in python scripts such that they can handle windowed averaged output safely.

--- a/Common/src/toolboxes/meson.build
+++ b/Common/src/toolboxes/meson.build
@@ -1,5 +1,4 @@
 common_src += files(['CLinearPartitioner.cpp',
-                     'printing_toolbox.cpp',
-                     'signal_processing_toolbox.cpp'])
+                     'printing_toolbox.cpp'])
 
 subdir('MMS')
