--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -63,7 +63,8 @@ su2_cfd_src += files(['output/CAdjElasticityOutput.cpp',
                       'output/filewriter/CCSVFileWriter.cpp',
                       'output/filewriter/CSU2FileWriter.cpp',
                       'output/filewriter/CSU2BinaryFileWriter.cpp',
-                      'output/filewriter/CSU2MeshFileWriter.cpp'])
+                      'output/filewriter/CSU2MeshFileWriter.cpp',
+		      'output/tools/CWindowingTools.cpp'])
 
 su2_cfd_src += files(['variables/CIncNSVariable.cpp',
                       'variables/CTransLMVariable.cpp',
