small bug in CWindowingTools fixed; TestCases Added

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -86,6 +86,21 @@ CONV_CAUCHY_EPS= 1E-10
 % Iteration number to begin unsteady restarts
 RESTART_ITER= 0
 %
+%% Time convergence monitoring
+WND_CAUCHY_CRIT = YES
+%
+% List of time convergence fields 
+WND_CONV_FIELD = (TAVG_DRAG, TAVG_LIFT)
+%
+% Time Convergence Monitoring starts at Iteration START_ITER_WND + WND_CONV_STARTITER
+WND_CONV_STARTITER = 0
+%
+% Epsilon to control the series convergence
+WND_CONV_CAUCHY_EPS = 10
+%
+% Number of elements to apply the criteria
+WND_CONV_CAUCHY_ELEMS = 1E-3
+%
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
 % Time domain simulation
@@ -104,6 +119,13 @@ MAX_TIME= 50.0
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
+%
+%%  Windowed output time averaging
+% Time iteration to start the windowed time average in a direct run
+START_ITER_WND = 500
+%
+% Window used for reverse sweep and direct run. Options (SQUARE, HANN, HANN_SQUARE, BUMP) Square is default. 
+WINDOW_FUNCTION = SQUARE
 %
 % ------------------------------- DES Parameters ------------------------------%
 %
