test case config refactored

--- a/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
+++ b/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
@@ -29,7 +29,7 @@ RESTART_SOL= NO
 WRT_BINARY_RESTART= NO
 %
 % Read binary restart files (YES, NO)
-READ_BINARY_RESTART= YES
+READ_BINARY_RESTART= NO
 
 TIME_DOMAIN = YES
 TIME_ITER = 10
@@ -56,11 +56,11 @@ INNER_ITER= 30
 UNST_ADJOINT_ITER= 10
 %
 % Number of time-steps to average (counted from the back)
-ITER_AVERAGE_OBJ= 10
+ITER_AVERAGE_OBJ= 5
 %
 %%  Windowed output time averaging
 % Time iteration to start the windowed time average in a direct run
-START_ITER_WND = 1
+START_ITER_WND = 5
 %
 % Window used for reverse sweep and direct run. Options (SQUARE, HANN, HANN_SQUARE, BUMP) Square is default. 
 WINDOW_FUNCTION = HANN
@@ -249,7 +249,7 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FILENAME= restart_flow.dat
+SOLUTION_FILENAME= solution_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
