now output files in the test case are correct

--- a/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
+++ b/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
@@ -296,6 +296,7 @@ WRT_CON_FREQ_DUALTIME= 1
 % Screen output
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_ADJ_DENSITY)
 HISTORY_OUTPUT = (ITER, TAVG_AERO_COEFF, D_TAVG_AERO_COEFF, AERO_COEFF)
+OUTPUT_FILES = (RESTART_ASCII)
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
 % Kind of deformation (TRANSLATION, ROTATION, SCALE,
