refactoring according to Pedros comments. Renaming of windowing-options.

--- a/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
+++ b/TestCases/disc_adj_rans/cylinder/cylinder_Windowing_AD.cfg
@@ -60,7 +60,7 @@ ITER_AVERAGE_OBJ= 5
 %
 %%  Windowed output time averaging
 % Time iteration to start the windowed time average in a direct run
-START_ITER_WND = 5
+WINDOW_START_ITER = 5
 %
 % Window used for reverse sweep and direct run. Options (SQUARE, HANN, HANN_SQUARE, BUMP) Square is default. 
 WINDOW_FUNCTION = HANN
@@ -223,19 +223,19 @@ CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-5
 %
 %% Time convergence monitoring
-WND_CAUCHY_CRIT = YES
+WINDOW_CAUCHY_CRIT = YES
 %
 % List of time convergence fields 
-WND_CONV_FIELD = TAVG_DRAG
+CONV_WINDOW_FIELD = TAVG_DRAG
 %
-% Time Convergence Monitoring starts at Iteration START_ITER_WND + WND_CONV_STARTITER
-WND_CONV_STARTITER = 0
+% Time Convergence Monitoring starts at Iteration WINDOW_START_ITER + CONV_WINDOW_STARTITER
+CONV_WINDOW_STARTITER = 0
 %
 % Epsilon to control the series convergence
-WND_CONV_CAUCHY_EPS = 1
+CONV_WINDOW_CAUCHY_EPS = 1
 %
 % Number of elements to apply the criteria
-WND_CONV_CAUCHY_ELEMS = 2
+CONV_WINDOW_CAUCHY_ELEMS = 2
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
