--- a/config_template.cfg
+++ b/config_template.cfg
@@ -87,19 +87,19 @@ CONV_CAUCHY_EPS= 1E-10
 RESTART_ITER= 0
 %
 %% Time convergence monitoring
-WND_CAUCHY_CRIT = YES
+WINDOW_CAUCHY_CRIT = YES
 %
 % List of time convergence fields 
-WND_CONV_FIELD = (TAVG_DRAG, TAVG_LIFT)
+CONV_WINDOW_FIELD = (TAVG_DRAG, TAVG_LIFT)
 %
-% Time Convergence Monitoring starts at Iteration START_ITER_WND + WND_CONV_STARTITER
-WND_CONV_STARTITER = 0
+% Time Convergence Monitoring starts at Iteration WINDOW_START_ITER + CONV_WINDOW_STARTITER
+CONV_WINDOW_STARTITER = 0
 %
 % Epsilon to control the series convergence
-WND_CONV_CAUCHY_EPS = 10
+CONV_WINDOW_CAUCHY_EPS = 1E-3
 %
 % Number of elements to apply the criteria
-WND_CONV_CAUCHY_ELEMS = 1E-3
+CONV_WINDOW_CAUCHY_ELEMS = 10
 %
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
@@ -122,7 +122,7 @@ UNST_CFL_NUMBER= 0.0
 %
 %%  Windowed output time averaging
 % Time iteration to start the windowed time average in a direct run
-START_ITER_WND = 500
+WINDOW_START_ITER = 500
 %
 % Window used for reverse sweep and direct run. Options (SQUARE, HANN, HANN_SQUARE, BUMP) Square is default. 
 WINDOW_FUNCTION = SQUARE
