--- a/TestCases/disc_adj_rans/cylinder/cylinder_Windowing.cfg
+++ b/TestCases/disc_adj_rans/cylinder/cylinder_Windowing.cfg
@@ -62,7 +62,7 @@ ITER_AVERAGE_OBJ= 10
 %
 %%  Windowed output time averaging
 % Time iteration to start the windowed time average in a direct run
-START_ITER_WND = 1
+WINDOW_START_ITER = 1
 %
 % Window used for reverse sweep and direct run. Options (SQUARE, HANN, HANN_SQUARE, BUMP) Square is default. 
 WINDOW_FUNCTION = HANN
@@ -225,19 +225,19 @@ CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-5
 %
 %% Time convergence monitoring
-WND_CAUCHY_CRIT = YES
+WINDOW_CAUCHY_CRIT = YES
 %
 % List of time convergence fields 
-WND_CONV_FIELD = (TAVG_DRAG, TAVG_LIFT)
+CONV_WINDOW_FIELD = (TAVG_DRAG, TAVG_LIFT)
 %
-% Time Convergence Monitoring starts at Iteration START_ITER_WND + WND_CONV_STARTITER
-WND_CONV_STARTITER = 0
+% Time Convergence Monitoring starts at Iteration WINDOW_START_ITER + CONV_WINDOW_STARTITER
+CONV_WINDOW_STARTITER = 0
 %
 % Epsilon to control the series convergence
-WND_CONV_CAUCHY_EPS = 1
+CONV_WINDOW_CAUCHY_EPS = 1
 %
 % Number of elements to apply the criteria
-WND_CONV_CAUCHY_ELEMS = 2
+CONV_WINDOW_CAUCHY_ELEMS = 2
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
