Adding meson build files and adding includes

--- a/Common/src/meson.build
+++ b/Common/src/meson.build
@@ -5,7 +5,6 @@ common_src =files(['geometry_structure_fem_part.cpp',
            'fem_geometry_structure.cpp',
            'fem_integration_rules.cpp',
            'config_structure.cpp',
-           'dual_grid_structure.cpp',
            'blas_structure.cpp',
            'ad_structure.cpp',
            'grid_movement_structure.cpp',
@@ -30,6 +29,7 @@ subdir('linear_algebra')
 subdir('toolboxes')
 subdir('geometry')
 subdir('geometry/elements')
+subdir('geometry/dual_grid')
 
 if get_option('enable-normal')
   common = static_library('SU2Common', 
