--- a/TestCases/rans/oneram6/turb_ONERAM6.cfg
+++ b/TestCases/rans/oneram6/turb_ONERAM6.cfg
@@ -25,7 +25,6 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 
-WRT_STL_SOL= YES
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
@@ -138,7 +137,7 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Number of total iterations
-ITER= 1
+ITER= 999999
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -245,13 +244,13 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= restart_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-OUTPUT_FILES=(STL, PARAVIEW)
+OUTPUT_FILES=(RESTART, STL, PARAVIEW, SURFACE_PARAVIEW)
 
 TABULAR_FORMAT= CSV
 %
