--- a/SU2_PY/pySU2/Makefile.in
+++ b/SU2_PY/pySU2/Makefile.in
@@ -300,9 +300,12 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 CURRENT_DIR = ${abs_top_builddir}/SU2_PY/pySU2
 SO_EXT = so
-SWIG_SRC = ${abs_top_srcdir}/SU2_PY/pySU2/pySU2.i
-SWIG_WRAP_REAL = SU2_APIPYTHON_wrap
-SWIG_SO_REAL = _pysu2.${SO_EXT}
+@BUILD_NORMAL_TRUE@SWIG_SRC = ${abs_top_srcdir}/SU2_PY/pySU2/pySU2.i
+@BUILD_REVERSE_TRUE@SWIG_SRC = ${abs_top_srcdir}/SU2_PY/pySU2/pySU2ad.i
+@BUILD_NORMAL_TRUE@SWIG_WRAP_REAL = SU2_APIPYTHON_wrap
+@BUILD_REVERSE_TRUE@SWIG_WRAP_REAL = SU2_APIPYTHON_wrap_AD
+@BUILD_NORMAL_TRUE@SWIG_SO_REAL = _pysu2.${SO_EXT}
+@BUILD_REVERSE_TRUE@SWIG_SO_REAL = _pysu2ad.${SO_EXT}
 PYTHON_SITE_PACKAGES = $(shell python -c "import site; print(site.getsitepackages()[0])")
 #NUMPY_INCLUDE = /usr/lib/python2.7/dist-packages/numpy/core/include
 MPI4PY_INCLUDE = ${HOME}/.local/lib/python2.7/site-packages/mpi4py/include \
@@ -310,8 +313,8 @@ MPI4PY_INCLUDE = ${HOME}/.local/lib/python2.7/site-packages/mpi4py/include \
                  -I/Library/Python/2.7/site-packages/mpi4py/include
 
 SWIG = swig
-pySU2_INCLUDE = -I${abs_top_srcdir}/Common/include \
-	-I${abs_top_srcdir}/SU2_CFD/include
+pySU2_INCLUDE = -I${abs_top_builddir}/Common/include \
+	-I${abs_top_builddir}/SU2_CFD/include
 
 PY_INCLUDE = ${PYTHON_INCLUDE} -I${MPI4PY_INCLUDE}
 PY_LIB = ${PYTHON_LIBS} \
@@ -321,12 +324,23 @@ PY_LIB = ${PYTHON_LIBS} \
 
 SWIG_INCLUDE = ${PY_INCLUDE}
 SUBDIR_EXEC = ${bindir}
-EXTRA_CC_FLAGS = -fPIC -O3
+@BUILD_NORMAL_TRUE@EXTRA_CC_FLAGS = -fPIC -O3 -std=c++11
+@BUILD_REVERSE_TRUE@EXTRA_CC_FLAGS = -fPIC -O3 -std=c++11 -DCODI_REVERSE_TYPE -I$(top_srcdir)/externals/codi/include -I$(top_srcdir)/externals/medi/include
+#  EXTRA_CC_FLAGS = -fPIC -g3 -std=c++11 -DCODI_REVERSE_TYPE -I$(top_srcdir)/externals/codi/include -I$(top_srcdir)/externals/medi/include
 
-#SU2Core lib
-SU2SOLVER_LIB = ${abs_top_builddir}/SU2_CFD/obj/libSU2Core.a \
-		${abs_top_builddir}/Common/lib/libSU2.a
+#SU2_BASE lib
+@BUILD_NORMAL_TRUE@SU2SOLVER_LIB = ${abs_top_builddir}/SU2_CFD/obj/libSU2Core.a \
+@BUILD_NORMAL_TRUE@    ${abs_top_builddir}/Common/lib/libSU2.a
 
+
+#SU2_AD lib
+@BUILD_REVERSE_TRUE@SU2SOLVER_LIB = ${abs_top_builddir}/SU2_CFD/obj/libSU2Core_AD.a \
+@BUILD_REVERSE_TRUE@    ${abs_top_builddir}/Common/lib/libSU2_AD.a
+
+@BUILD_NORMAL_TRUE@PYLIB = pysu2.py
+@BUILD_REVERSE_TRUE@PYLIB = pysu2ad.py
+@BUILD_NORMAL_TRUE@SOLIB = _pysu2.so
+@BUILD_REVERSE_TRUE@SOLIB = _pysu2ad.so
 
 # Set the linking flags to use
 pySU2_LD_FLAGS = ${SU2SOLVER_LIB} @su2_externals_LIBS@ ${PY_LIB}
@@ -546,8 +560,8 @@ clean:
 	rm -f ${CURRENT_DIR}/*.py
 
 install: all
-	${INSTALL} pysu2.py ${bindir}
-	${INSTALL} _pysu2.so ${bindir}
+	${INSTALL} ${PYLIB} ${bindir}
+	${INSTALL} ${SOLIB} ${bindir}
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
