--- a/SU2_DOT/src/meson.build
+++ b/SU2_DOT/src/meson.build
@@ -1,6 +1,6 @@
 su2_dot_src = ['SU2_DOT.cpp']
 if get_option('enable-normal')
-  su2_cfd_obj = su2_cfd.extract_objects(['solver_structure.cpp',
+  su2_cfd_obj = su2_cfd.extract_objects(['solvers/CSolver.cpp',
                                         'CMarkerProfileReaderFVM.cpp',
                                        'output/COutput.cpp',
                                        'output/output_structure_legacy.cpp',
@@ -33,7 +33,7 @@ endif
 
 if get_option('enable-autodiff')
   su2_dot_src_ad = ['SU2_DOT.cpp']
-  su2_cfd_obj_ad = su2_cfd_ad.extract_objects(['solver_structure.cpp',
+  su2_cfd_obj_ad = su2_cfd_ad.extract_objects(['solvers/CSolver.cpp',
                                         'CMarkerProfileReaderFVM.cpp',
                                        'output/COutput.cpp',
                                        'output/output_structure_legacy.cpp',
