--- a/SU2_SOL/src/meson.build
+++ b/SU2_SOL/src/meson.build
@@ -1,6 +1,8 @@
 su2_sol_src = ['SU2_SOL.cpp']
 if get_option('enable-normal')
   su2_cfd_obj = su2_cfd.extract_objects(['solvers/CSolver.cpp',
+                                        'solvers/CBaselineSolver.cpp',
+                                        'solvers/CBaselineSolver_FEM.cpp',
                                         'CMarkerProfileReaderFVM.cpp',
                                         'output/COutput.cpp',
                                         'output/output_structure_legacy.cpp',
