added changes suggested in PR

--- a/TestCases/disc_adj_rans/cylinder/cylinder_Windowing.cfg
+++ b/TestCases/disc_adj_rans/cylinder/cylinder_Windowing.cfg
@@ -47,9 +47,6 @@ TIME_STEP= 0.0015
 %
 % Total Physical Time for dual time stepping simulations (s)
 MAX_TIME= 3.75
-% 2500 iterations - 3.75
-% 3500 iterations - 5.25
-% 5000 iterations - 7.50
 %
 % Number of internal iterations (dual time method)
 INNER_ITER= 30
@@ -123,18 +120,6 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 % Courant-Friedrichs-Lewy condition of the finest grid
 CFL_NUMBER= 10.0
 %
-% Adaptive CFL number (NO, YES)
-CFL_ADAPT= NO
-%
-% Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
-%                                        CFL max value )
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
-%
-% Runge-Kutta alpha coefficients
-RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-%
-% Objective function
-OBJECTIVE_FUNCTION=DRAG
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 % Linear solver for the implicit (or discrete adjoint) formulation (BCGSTAB, FGMRES)
@@ -148,30 +133,7 @@ LINEAR_SOLVER_ERROR= 1E-6
 %
 % Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 5
-
-% -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
-% Multi-Grid Levels (0 = no multi-grid)
-MGLEVEL= 0
-%
-% Multi-grid cycle (V_CYCLE, W_CYCLE, FULLMG_CYCLE)
-MGCYCLE= V_CYCLE
-%
-% Multi-grid pre-smoothing level
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-%
-% Multi-grid post-smoothing level
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Jacobi implicit smoothing of the correction
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-%
-% Damping factor for the residual restriction
-MG_DAMP_RESTRICTION= 0.7
-%
-% Damping factor for the correction prolongation
-MG_DAMP_PROLONGATION= 0.7
-
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
 % Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
@@ -210,7 +172,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
 CONV_CRITERIA= RESIDUAL
-%
 %
 % Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -16
@@ -283,21 +244,10 @@ SURFACE_FILENAME= surface_flow
 % Output file surface adjoint coefficient (w/o extension)
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
-% Writing solution file frequency
-WRT_SOL_FREQ= 1000
-%
-% Writing solution file frequency for physical time steps (dual time)
-WRT_SOL_FREQ_DUALTIME= 1
-%
-% Writing convergence history frequency
-WRT_CON_FREQ= 1
-%
-% Writing convergence history frequency (dual time, only written to screen)
-WRT_CON_FREQ_DUALTIME= 1
-%
 % Screen output
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, DRAG, LIFT, TAVG_DRAG, TAVG_LIFT,  CAUCHY_TAVG_DRAG)
 HISTORY_OUTPUT = (ITER, TAVG_AERO_COEFF, AERO_COEFF)
+
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
 % Kind of deformation (TRANSLATION, ROTATION, SCALE,
@@ -392,25 +342,7 @@ DEFORM_CONSOLE_OUTPUT= YES
 %    ROTATION               (   2, Scale | Mark. List | x_Axis, y_Axis, z_Axis, x_Turn, y_Turn, z_Turn )
 %
 % Optimization objective function with scaling factor
-% ex= Objective * Scale
-OPT_OBJECTIVE= DRAG * 0.01
-%
-% Optimization constraint functions with scaling factors, separated by semicolons
-% ex= (Objective = Value ) * Scale, use '>','<','='
-OPT_CONSTRAINT= NONE 
-%
-% Maximum number of iterations
-OPT_ITERATIONS= 100
-%
-% Requested accuracy
-OPT_ACCURACY= 1E-6
-%
-% Upper bound for each design variable
-OPT_BOUND_UPPER= 0.1
-%
-% Lower bound for each design variable
-OPT_BOUND_LOWER= -0.1
 %
 % Optimization design variables, separated by semicolons
-DEFINITION_DV= ( 30, 1.0 | Cylinder | 0, 0.05 ); 
+DEFINITION_DV= ( 30, 1.0 | Cylinder | 0, 0.05 ); ( 30, 1.0 | Cylinder | 0, 0.10 ); ( 30, 1.0 | Cylinder | 0, 0.15 ); ( 30, 1.0 | Cylinder | 0, 0.20 ); ( 30, 1.0 | Cylinder | 0, 0.25 ); ( 30, 1.0 | Cylinder | 0, 0.30 ); ( 30, 1.0 | Cylinder | 0, 0.35 ); ( 30, 1.0 | Cylinder | 0, 0.40 ); ( 30, 1.0 | Cylinder | 0, 0.45 ); ( 30, 1.0 | Cylinder | 0, 0.50 ); ( 30, 1.0 | Cylinder | 0, 0.55 ); ( 30, 1.0 | Cylinder | 0, 0.60 ); ( 30, 1.0 | Cylinder | 0, 0.65 ); ( 30, 1.0 | Cylinder | 0, 0.70 ); ( 30, 1.0 | Cylinder | 0, 0.75 ); ( 30, 1.0 | Cylinder | 0, 0.80 ); ( 30, 1.0 | Cylinder | 0, 0.85 ); ( 30, 1.0 | Cylinder | 0, 0.90 ); ( 30, 1.0 | Cylinder | 0, 0.95 ); ( 30, 1.0 | Cylinder | 1, 0.05 ); ( 30, 1.0 | Cylinder | 1, 0.10 ); ( 30, 1.0 | Cylinder | 1, 0.15 ); ( 30, 1.0 | Cylinder | 1, 0.20 ); ( 30, 1.0 | Cylinder | 1, 0.25 ); ( 30, 1.0 | Cylinder | 1, 0.30 ); ( 30, 1.0 | Cylinder | 1, 0.35 ); ( 30, 1.0 | Cylinder | 1, 0.40 ); ( 30, 1.0 | Cylinder | 1, 0.45 ); ( 30, 1.0 | Cylinder | 1, 0.50 ); ( 30, 1.0 | Cylinder | 1, 0.55 ); ( 30, 1.0 | Cylinder | 1, 0.60 ); ( 30, 1.0 | Cylinder | 1, 0.65 ); ( 30, 1.0 | Cylinder | 1, 0.70 ); ( 30, 1.0 | Cylinder | 1, 0.75 ); ( 30, 1.0 | Cylinder | 1, 0.80 ); ( 30, 1.0 | Cylinder | 1, 0.85 ); ( 30, 1.0 | Cylinder | 1, 0.90 ); ( 30, 1.0 | Cylinder | 1, 0.95 )
 %
