--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1234,7 +1234,7 @@ FFD_DEGREE= (10, 10, 1)
 FFD_CONTINUITY= 2ND_DERIVATIVE
 %
 % Definition of the FFD planes to be frozen in the FFD (x,y,z).
-% Value from 0 FFD degree in that direction. Pick a value larger than degree if you don't want to fix any plane.
+% Value from 0 FFD degree in that direction. Pick a value larger than degree if you dont want to fix any plane.
 FFD_FIX_I= (0,2,3)
 FFD_FIX_J= (0,2,3)
 FFD_FIX_K= (0,2,3)
@@ -1322,6 +1322,10 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= TECPLOT
 %
 % Files to output 
+% Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
+%  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
+%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
+% default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
 % Output file convergence history (w/o extension)
