Minor fix to add convert_to_csv script to path.

--- a/SU2_PY/meson.build
+++ b/SU2_PY/meson.build
@@ -10,6 +10,7 @@ install_data(['continuous_adjoint.py',
 	     'set_ffd_design_var.py',
 	     'compute_polar.py',
 	     'compute_multipoint.py',
+	     'convert_to_csv.py',
 	     'discrete_adjoint.py',
 	     'direct_differentiation.py',
 	     'fsi_computation.py',
