--- a/SU2_DEF/src/meson.build
+++ b/SU2_DEF/src/meson.build
@@ -1,7 +1,7 @@
 su2_def_src = ['SU2_DEF.cpp']
 if get_option('enable-normal')
 
-  su2_cfd_obj = su2_cfd.extract_objects(['solver_structure.cpp',
+  su2_cfd_obj = su2_cfd_lib.extract_objects(['solver_structure.cpp',
                                         'CMarkerProfileReaderFVM.cpp',
                                         'output/COutput.cpp',
 					'output/tools/CWindowingTools.cpp',
