--- a/SU2_DOT/src/meson.build
+++ b/SU2_DOT/src/meson.build
@@ -1,6 +1,6 @@
 su2_dot_src = ['SU2_DOT.cpp']
 if get_option('enable-normal')
-  su2_cfd_obj = su2_cfd.extract_objects(['solver_structure.cpp',
+  su2_cfd_obj = su2_cfd_lib.extract_objects(['solver_structure.cpp',
                                         'CMarkerProfileReaderFVM.cpp',
                                         'output/COutput.cpp',
                                         'output/output_structure_legacy.cpp',
