clearer variable name, change one case to cover Venkat-Wang limiter

--- a/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_rst.cfg
+++ b/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_rst.cfg
@@ -243,7 +243,7 @@ CONV_NUM_METHOD_FLOW= ROE
 MUSCL_FLOW= YES
 %
 % Slope limiter (VENKATAKRISHNAN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
+SLOPE_LIMITER_FLOW= VENKATAKRISHNAN_WANG
 %
 % Entropy fix coefficient (0.0 implies no entropy fixing, 1.0 implies scalar artificial dissipation, 0.001 default)
 ENTROPY_FIX_COEFF= 0.03
